# sdroxide

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/sdroxide-audio/: Cargo.toml
crates/sdroxide-audio/src/: lib.rs
crates/sdroxide-cat/: Cargo.toml
crates/sdroxide-cat/examples/: catprobe.rs
crates/sdroxide-cat/src/: civ.rs  lib.rs  yaesu.rs
crates/sdroxide-config/: Cargo.toml
crates/sdroxide-config/src/: lib.rs
crates/sdroxide-digi/: Cargo.toml
crates/sdroxide-digi/src/: controller.rs  fsq_controller.rs  lib.rs  modem.rs  params.rs  qso.rs  rf_paint_controller.rs  scheduler.rs  squelch.rs  sstv_controller.rs  text_modem.rs
crates/sdroxide-dsp/: Cargo.toml
crates/sdroxide-dsp/src/: agc.rs  ddc.rs  decim.rs  demod.rs  fec.rs  fir.rs  fsq.rs  fsq_image.rs  interp.rs  lib.rs  mfsk.rs  modulator.rs  nb.rs  nco.rs  notch.rs  nr.rs  olivia.rs  psk.rs  resample.rs  rtty.rs  spectrum.rs  spectrum_paint.rs  sstv.rs  thor.rs  window.rs
crates/sdroxide-dsp/tests/: chain.rs
crates/sdroxide-hpsdr/: Cargo.toml
crates/sdroxide-hpsdr/examples/: discover.rs
crates/sdroxide-hpsdr/src/: discovery.rs  lib.rs  net.rs  protocol1.rs  protocol2.rs
crates/sdroxide-hpsdr/tests/: loopback.rs
crates/sdroxide-proto/: Cargo.toml
crates/sdroxide-proto/src/: lib.rs
crates/sdroxide-radio/: Cargo.toml
crates/sdroxide-radio/src/: device.rs  engine.rs  error.rs  lib.rs  recorder.rs  source.rs
crates/sdroxide-radio/tests/: tx_monitor.rs
crates/sdroxide-server/: Cargo.toml
crates/sdroxide-server/src/: lib.rs  session.rs
crates/sdroxide-server/tests/: session.rs
crates/sdroxide-skimmer/: Cargo.toml
crates/sdroxide-skimmer/src/: callsign.rs  controller.rs  cw.rs  digi.rs  lib.rs  morse.rs
crates/sdroxide-tci/: Cargo.toml
crates/sdroxide-tci/examples/: live.rs  probe.rs
crates/sdroxide-tci/src/: lib.rs  net.rs  protocol.rs
crates/sdroxide-types/: Cargo.toml
crates/sdroxide-types/src/: band.rs  band_segments.rs  caps.rs  command.rs  contacts.rs  controller.rs  digi.rs  geo.rs  lib.rs  memory.rs  meters.rs  mode.rs  radio.rs  skimmer.rs  spectrum.rs  sstv.rs  state.rs  ui.rs  worldmask.rs
crates/sdroxide-ui/: Cargo.toml
crates/sdroxide-ui/src/: app.rs  chrome.rs  colormap.rs  download.rs  help.rs  lib.rs  remote.rs  rf_paint.rs  sstv.rs  theme.rs  view.rs  waterfall_gpu.rs
crates/sdroxide-ui/src/shaders/: waterfall.wgsl  waterfall_remap.wgsl
crates/sdroxide-ui/src/widgets/: bandplan.rs  freq_display.rs  mod.rs  smeter.rs  spectrum_view.rs  worldmap.rs
crates/sdroxide-web/: Cargo.toml  index.html
crates/sdroxide-web/assets/: audio_bridge.js  pcm_worklet.js
crates/sdroxide-web/src/: main.rs
docs/: USER_MANUAL.md
packaging/linux/: sdroxide.desktop
packaging/macos/: Info.plist
packaging/windows/: main.wxs
src/: audio_cat_source.rs  console.rs  gui_main.rs  hpsdr_source.rs  local_controller.rs  main.rs  null_source.rs  server_main.rs  tci_source.rs
