[workspace]
resolver = "3"
members = ["crates/*"]
default-members = [".", "crates/sdroxide-types", "crates/sdroxide-proto", "crates/sdroxide-dsp", "crates/sdroxide-radio", "crates/sdroxide-config"]

[workspace.package]
version = "0.1.0"
edition = "2024"
# The native binary links mfsk-core (GPL-3.0-or-later) for FT8/FT4, so the
# built binary is GPL-3.0-or-later. The GPL dependency is confined to the
# sdroxide-digi crate; the wasm remote client links none of it.
license = "GPL-3.0-or-later"

# DSP is unusably slow unoptimized; keep deps and the sample-rate-hot crates
# fast in dev builds while the rest stays quick to compile.
[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.sdroxide-dsp]
opt-level = 2

[profile.dev.package.sdroxide-radio]
opt-level = 2

# The CW skimmer's STFT + per-bin scan run every audio block; unoptimized they
# stutter the audio, so keep them fast in dev too.
[profile.dev.package.sdroxide-skimmer]
opt-level = 2

[workspace.dependencies]
sdroxide-types = { path = "crates/sdroxide-types" }
sdroxide-proto = { path = "crates/sdroxide-proto" }
sdroxide-dsp = { path = "crates/sdroxide-dsp" }
sdroxide-radio = { path = "crates/sdroxide-radio" }
sdroxide-audio = { path = "crates/sdroxide-audio" }
sdroxide-server = { path = "crates/sdroxide-server" }
sdroxide-config = { path = "crates/sdroxide-config" }
sdroxide-ui = { path = "crates/sdroxide-ui" }
sdroxide-cat = { path = "crates/sdroxide-cat" }

serde = { version = "1", features = ["derive"] }
num-complex = "0.4"
rustfft = "6"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
postcard = { version = "1", features = ["use-std"] }
crossbeam-channel = "0.5"
rtrb = "0.3"

[package]
name = "sdroxide"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PowerSDR/Thetis-style SDR transceiver with a native GUI, a browser-served web UI, and FT8/FT4 digital modes"

[dependencies]
sdroxide-types.workspace = true
sdroxide-proto.workspace = true
sdroxide-dsp.workspace = true
sdroxide-radio = { path = "crates/sdroxide-radio", default-features = false }
sdroxide-config.workspace = true
sdroxide-audio.workspace = true
sdroxide-server.workspace = true
sdroxide-cat.workspace = true
sdroxide-ui = { workspace = true, features = ["remote"] }
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11", "persistence"] }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
num-complex.workspace = true

[features]
default = ["soapy"]
# SoapySDR device support. Turn off (`--no-default-features`) for a CAT-only
# binary that builds and runs without libSoapySDR installed.
soapy = ["sdroxide-radio/soapy"]
# Bundle the trunk-built web client into the binary (run `trunk build
# --release` in crates/sdroxide-web first).
embed-web = ["sdroxide-server/embed-web"]

# `cargo deb` packaging (used by the release workflow with --no-build after a
# `--features embed-web` release build).
[package.metadata.deb]
maintainer = "Josef Jahn <josef.jahn@gmail.com>"
copyright = "2026, Josef Jahn"
extended-description = """\
PowerSDR/Thetis-style software-defined-radio transceiver client built on \
SoapySDR with an egui GUI. Runs as a native desktop application or as a \
server that streams the same UI to a web browser. Includes FT8/FT4 digital \
modes and an integrated logbook."""
section = "hamradio"
priority = "optional"
license-file = ["LICENSE", "0"]
recommends = "soapysdr-module-all"
features = ["embed-web"]
assets = [
    ["target/release/sdroxide", "usr/bin/", "755"],
    ["packaging/linux/sdroxide.desktop", "usr/share/applications/", "644"],
    ["README.md", "usr/share/doc/sdroxide/README.md", "644"],
]

# CAT-only .deb: no SoapySDR link, so drop the SoapySDR recommendation (apt
# installs Recommends by default). Built with `cargo deb --variant cat`.
[package.metadata.deb.variants.cat]
name = "sdroxide-cat"
recommends = ""
