[package]
name = "sdroxide-radio"
version.workspace = true
edition.workspace = true

[features]
# SoapySDR is optional so a CAT-only build needs no libSoapySDR installed.
default = ["soapy"]
soapy = ["dep:soapysdr"]

[dependencies]
sdroxide-types.workspace = true
sdroxide-dsp.workspace = true
num-complex.workspace = true
thiserror.workspace = true
tracing.workspace = true
soapysdr = { version = "0.5.1", optional = true }
triple_buffer = "9.0.0"
crossbeam-channel.workspace = true
rtrb.workspace = true
sdroxide-config = { version = "0.4.0", path = "../sdroxide-config" }
sdroxide-digi = { version = "0.4.0", path = "../sdroxide-digi" }
sdroxide-skimmer = { version = "0.4.0", path = "../sdroxide-skimmer" }
# SSTV: encode received images to PNG for the config store, decode composed
# TX images (PNG) back to RGB. Minimal formats to keep the build lean.
image = { version = "0.25", default-features = false, features = ["png"] }
