[package]
name = "sdroxide-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
crossbeam-channel.workspace = true
futures-util = "0.3.33"
mime_guess = "2.0.5"
opus = "0.3.1"
rtrb.workspace = true
rust-embed = { version = "8.12.0", features = ["interpolate-folder-path"], optional = true }
sdroxide-proto = { version = "0.3.0", path = "../sdroxide-proto" }
sdroxide-types = { version = "0.3.0", path = "../sdroxide-types" }
thiserror.workspace = true
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tower-http = { version = "0.7.0", features = ["fs", "set-header"] }
tracing.workspace = true
triple_buffer = "9.0.0"

[dev-dependencies]
# The server only uses the engine, not SoapySDR device handling — leave
# `soapy` for the top-level binary to decide.
sdroxide-radio = { path = "../sdroxide-radio", default-features = false }
tokio-tungstenite = "0.30.0"

[features]
embed-web = ["dep:rust-embed"]
