[package]
name = "sdroxide-ui"
version.workspace = true
edition.workspace = true

[dependencies]
sdroxide-types.workspace = true
serde.workspace = true
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11", "persistence"] }
ewebsock = { version = "0.8.0", optional = true }
sdroxide-proto = { version = "0.2.0", path = "../sdroxide-proto", optional = true }

[features]
# WebSocket RemoteController for the browser (and native remote) client.
remote = ["dep:ewebsock", "dep:sdroxide-proto"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
sdroxide-config = { version = "0.2.0", path = "../sdroxide-config" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Blob", "BlobPropertyBag", "Url", "Document", "Window", "HtmlAnchorElement", "HtmlElement"] }
