[package]
name = "sdroxide-ui"
version.workspace = true
edition.workspace = true

[dependencies]
sdroxide-types.workspace = true
serde.workspace = true
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11", "persistence"] }
ewebsock = { version = "0.8.0", optional = true }
sdroxide-proto = { version = "0.3.0", path = "../sdroxide-proto", optional = true }
# SSTV: crop/scale + PNG decode/encode of gallery and TX-source images, and
# glyph rasterisation for the message overlay. Both are pure-Rust / wasm-safe.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ab_glyph = "0.2"

[features]
# WebSocket RemoteController for the browser (and native remote) client.
remote = ["dep:ewebsock", "dep:sdroxide-proto"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
sdroxide-config = { version = "0.3.0", path = "../sdroxide-config" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
rfd = "0.15"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Blob", "BlobPropertyBag", "Url", "Document", "Window", "HtmlAnchorElement", "HtmlElement"] }
