[package]
name = "sdroxide-web"
version.workspace = true
edition.workspace = true

[dependencies]
sdroxide-types.workspace = true
sdroxide-proto.workspace = true
sdroxide-ui = { workspace = true, features = ["remote"] }
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Location", "Document", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1"
